Allow to set the memory used for the tomcat proces.
git-svn-id: http://svn.teachus.dk/dk.teachus/trunk@403 9534b298-6716-0410-9c14-e4ca5a2019ab